--- a/Web/package.json
+++ b/Web/package.json
@@ -33,7 +33,8 @@
     "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.13.2"
+    "recharts": "^2.13.2",
+    "tanstack-query": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
