--- a/Web/package.json
+++ b/Web/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "recharts": "^2.13.2",
     "tanstack-query": "^1.0.0"
   },
