--- a/Web/package.json
+++ b/Web/package.json
@@ -23,6 +23,8 @@
     "@mantine/nprogress": "^7.13.4",
     "@mantine/spotlight": "^7.13.4",
     "@mantine/tiptap": "^7.13.4",
+    "@react-icons/all-files": "^4.1.0",
+    "@tabler/icons-react": "^3.24.0",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-router": "^1.78.0",
     "@tiptap/extension-link": "^2.9.1",
@@ -31,8 +33,10 @@
     "@tiptap/starter-kit": "^2.9.1",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^7.1.0",
+    "icons-react": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "recharts": "^2.13.2",
     "tanstack-query": "^1.0.0"
