--- a/Web/package.json
+++ b/Web/package.json
@@ -2,6 +2,7 @@
   "name": "react-app",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://localhost:3000/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -31,6 +32,7 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^7.1.0",
     "icons-react": "^3.7.1",
