--- a/Web/package.json
+++ b/Web/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^7.1.0",
+    "formik": "^2.4.6",
     "icons-react": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
